# scd-loader

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pyrightconfig.json  setup.py
.claude/: settings.json
.claude/commands/: pr.md
.claude/skills/branch-pr/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish.yml
api/exceptions/: index.html
api/scd2/config/: index.html
api/scd2/loader/: index.html
api/scd2/transforms/: index.html
docs/: index.md
docs/api/: exceptions.md  scd2_loader.md
docs/api/core/: config.md  processor.md  validator.md
docs/api/scd2/: config.md  processor.md  transforms.md
docs/api/scd2/services/: date_service.md  hash_service.md
docs/api/services/: data_service.md  date_service.md  hash_service.md
helpers/: exceptions.py
loadx/: __init__.py
loadx/overwrite/: __init__.py
loadx/scd1/: __init__.py
loadx/scd2/: __init__.py  config.py  loader.py  processor.py  transforms.py  validator.py
loadx/scd2/services/: data_service.py  date_service.py  hash_service.py
loadx/utils/: logging_config.py
scd_loader/: __init__.py  exceptions.py  scd2_loader.py
scd_loader/core/: config.py  processor.py  validator.py
scd_loader/services/: data_service.py  hash_service.py
scd_loader/utils/: logging_config.py  spark_factory.py
search/: search_index.json
tests/: conftest.py  test_base.py  test_components.py  test_delta_target_table.py  test_scd2_loader.py
