[tool.poetry]
name = "scd-loader"
version = "0.1.0"
description = ""
authors = ["Ramu Kamath <ramu.kamath.1988@gmail.clm>"]
readme = "README.md"
packages = [{include = "scd_loader"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pyspark = "^3.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
isort = "^5.11.3"
absolufy-imports = "^0.3.1"
reorder-python-imports = "^3.9.0"
pyspark = "^3.3.1"
pytest = "^7.2.0"
chispa = "^0.9.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=scd_loader"
testpaths = [
    "tests",
]
