[project]
name = "scd-loader"
version = "0.1.0"
description = ""
authors = [{ name = "Ramu Kamath", email = "ramu.kamath.1988@gmail.clm" }]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "pyspark>=3.5.6",
]

[dependency-groups]
dev = [
    "pre-commit>=2.20.0,<3",
    "black>=22.12.0,<23",
    "isort>=5.11.3,<6",
    "absolufy-imports>=0.3.1,<0.4",
    "reorder-python-imports>=3.9.0,<4",
    "pyspark>=3.3.1,<4",
    "pytest>=7.2.0,<8",
    "chispa>=0.9.2,<0.10",
    "pytest-cov>=4.0.0,<5",
    "flake8>=6.0.0,<7",
    "deptry==0.23.0",
    "mypy>=1.5.0,<2",
    "go-task-bin>=3.49.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-material>=9.7.6",
]

[tool.hatch.build.targets.sdist]
include = ["scd_loader"]

[tool.hatch.build.targets.wheel]
include = ["scd_loader"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py38"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-blind-except
    "BLE",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-use-pathlib
    "PTH",
    # isort
    "I",
    # mccabe
    "C90",
    # pep8-naming
    "N",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",

]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY003"
]
extend-exclude = ["tests/*"]

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.format]
preview = true

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
